--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,18 @@
+</div>
+</div>
+<p style="font-size:12px !important;  text-align: center; margin: 4rem auto; border-top: 1px solid rgba(128, 128, 128, 0.317); padding: 2rem;">This is a project still in development, new functionalities and features coming soon 😉😉. In the meantime play around and post something or make a comment. Visit the <a href="https://github.com/willyestrada81/BlogApp" target="_blank">Github </a>repository here to learn more</p>
+
+<script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
+<script src="/js/main.js"></script>
+<script>
+    ClassicEditor
+        .create(document.querySelector('#editor'))
+        .catch(error => {
+            console.error(error);
+        });
+</script>
+<script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
+
 </body>
 
 </html>
