--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,13 +20,10 @@
                         <img src="/img/logo.png">
                     </a>
                 </div>
-                <a class="item" href="/">Home</a>
-                <a class="item" href="/blogs/new">New Post</a>
+                <a class="item ui black button" href="/">Home</a>
                 <a class="item" href="/blogs">All Posts</a>
-                <a class="item" href="#">About Me</a>
+                <a class="item" href="/blogs/new">New Post</a>
                 <a class="item" href="/register">Register</a>
-                <button href="#" class="ui black button">Hire Me
-                </button>
             </div>
         </div>
    
