Fixed some typos

--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -24,7 +24,7 @@
             </div>
             <div class="required field textarea-input">
                 <label>What's on your mind?</label>
-                <textarea rows="12" cols="133" required name="post_body" id="editor" placeholder="Please, remember to credir the originla author and include a link to the original post at the bottom.">
+                <textarea rows="12" cols="133" required name="post_body" id="editor" placeholder="Please, remember to credit the original author and to include a link to the original post.">
                 </textarea>
             </div>
             <button class="fluid ui button orange rounded-button" type="submit">Submit</button>
